Recipes, categories, cookingTypes, types and sections have now unique constraint

--- a/public/css/addSection.css
+++ b/public/css/addSection.css
@@ -25,6 +25,10 @@ label {
 	margin-bottom: 5px;
 }
 
+li {
+	color: red;
+}
+
 @media screen and (min-width: 600px) and (max-width: 799px) {
 	form {
 		width: 50vw;
