--- a/public/css/addType.css
+++ b/public/css/addType.css
@@ -25,6 +25,10 @@ label {
 	margin-bottom: 5px;
 }
 
+li {
+	color: red;
+}
+
 @media screen and (min-width: 600px) and (max-width: 799px) {
 	form {
 		width: 50vw;
