--- a/templates/parameter/index.html.twig
+++ b/templates/parameter/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste de courses{% endblock %}
+{% block title %}Paramètres{% endblock %}
 {% block stylesheets %}
 	{{ parent() }}
 	<link rel="stylesheet" href="{{ asset('css/header.css') }}" />
-	<link rel="stylesheet" href="{{ asset('css/shopping.css') }}" />
+	<link rel="stylesheet" href="{{ asset('css/parameters.css') }}" />
 {% endblock %}
 
 {% block body %}
@@ -35,10 +35,10 @@
 						<a href="{{ path('planning') }}" class="text-decoration-none text-white fw-bold ms-2">Planning</a>
 					</li>
 					<li class="d-flex align-items-center">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list-ul text-warning" viewBox="0 0 16 16">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list-ul text-white" viewBox="0 0 16 16">
 							<path fill-rule="evenodd" d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm-3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
 						</svg>
-						<a href="{{ path('shopping') }}" class="text-decoration-none text-warning fw-bold ms-2">Liste de courses</a>
+						<a href="{{ path('shopping') }}" class="text-decoration-none text-white fw-bold ms-2">Liste de courses</a>
 					</li>
 					<li class="d-flex align-items-center">
 						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-apple text-white" viewBox="0 0 16 16">
@@ -48,10 +48,10 @@
 						<a href="{{ path('foods') }}" class="text-decoration-none text-white fw-bold ms-2">Aliments</a>
 					</li>
 					<li class="d-flex align-items-center">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear-wide-connected text-white" viewBox="0 0 16 16">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear-wide-connected text-warning" viewBox="0 0 16 16">
 							<path d="M7.068.727c.243-.97 1.62-.97 1.864 0l.071.286a.96.96 0 0 0 1.622.434l.205-.211c.695-.719 1.888-.03 1.613.931l-.08.284a.96.96 0 0 0 1.187 1.187l.283-.081c.96-.275 1.65.918.931 1.613l-.211.205a.96.96 0 0 0 .434 1.622l.286.071c.97.243.97 1.62 0 1.864l-.286.071a.96.96 0 0 0-.434 1.622l.211.205c.719.695.03 1.888-.931 1.613l-.284-.08a.96.96 0 0 0-1.187 1.187l.081.283c.275.96-.918 1.65-1.613.931l-.205-.211a.96.96 0 0 0-1.622.434l-.071.286c-.243.97-1.62.97-1.864 0l-.071-.286a.96.96 0 0 0-1.622-.434l-.205.211c-.695.719-1.888.03-1.613-.931l.08-.284a.96.96 0 0 0-1.186-1.187l-.284.081c-.96.275-1.65-.918-.931-1.613l.211-.205a.96.96 0 0 0-.434-1.622l-.286-.071c-.97-.243-.97-1.62 0-1.864l.286-.071a.96.96 0 0 0 .434-1.622l-.211-.205c-.719-.695-.03-1.888.931-1.613l.284.08a.96.96 0 0 0 1.187-1.186l-.081-.284c-.275-.96.918-1.65 1.613-.931l.205.211a.96.96 0 0 0 1.622-.434l.071-.286zM12.973 8.5H8.25l-2.834 3.779A4.998 4.998 0 0 0 12.973 8.5zm0-1a4.998 4.998 0 0 0-7.557-3.779l2.834 3.78h4.723zM5.048 3.967c-.03.021-.058.043-.087.065l.087-.065zm-.431.355A4.984 4.984 0 0 0 3.002 8c0 1.455.622 2.765 1.615 3.678L7.375 8 4.617 4.322zm.344 7.646.087.065-.087-.065z"/>
 						</svg>
-						<a href="{{ path('parameters') }}" class="text-decoration-none text-white fw-bold ms-2">Paramètres</a>
+						<a href="{{ path('parameters') }}" class="text-decoration-none text-warning fw-bold ms-2">Paramètres</a>
 					</li>
                 </ul>
             </div>
@@ -84,10 +84,10 @@
 							<a href="{{ path('planning') }}" class="text-decoration-none text-white fw-bold ms-2">Planning</a>
 						</li>
 						<li class="d-flex align-items-center">
-							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list-ul text-warning" viewBox="0 0 16 16">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list-ul text-white" viewBox="0 0 16 16">
 								<path fill-rule="evenodd" d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm-3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
 							</svg>
-							<a href="{{ path('shopping') }}" class="text-decoration-none text-warning fw-bold ms-2">Liste de courses</a>
+							<a href="{{ path('shopping') }}" class="text-decoration-none text-white fw-bold ms-2">Liste de courses</a>
 						</li>
 						<li class="d-flex align-items-center">
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-apple text-white" viewBox="0 0 16 16">
@@ -97,10 +97,10 @@
 							<a href="{{ path('foods') }}" class="text-decoration-none text-white fw-bold ms-2">Aliments</a>
 						</li>
 						<li class="d-flex align-items-center">
-							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear-wide-connected text-white" viewBox="0 0 16 16">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear-wide-connected text-warning" viewBox="0 0 16 16">
 								<path d="M7.068.727c.243-.97 1.62-.97 1.864 0l.071.286a.96.96 0 0 0 1.622.434l.205-.211c.695-.719 1.888-.03 1.613.931l-.08.284a.96.96 0 0 0 1.187 1.187l.283-.081c.96-.275 1.65.918.931 1.613l-.211.205a.96.96 0 0 0 .434 1.622l.286.071c.97.243.97 1.62 0 1.864l-.286.071a.96.96 0 0 0-.434 1.622l.211.205c.719.695.03 1.888-.931 1.613l-.284-.08a.96.96 0 0 0-1.187 1.187l.081.283c.275.96-.918 1.65-1.613.931l-.205-.211a.96.96 0 0 0-1.622.434l-.071.286c-.243.97-1.62.97-1.864 0l-.071-.286a.96.96 0 0 0-1.622-.434l-.205.211c-.695.719-1.888.03-1.613-.931l.08-.284a.96.96 0 0 0-1.186-1.187l-.284.081c-.96.275-1.65-.918-.931-1.613l.211-.205a.96.96 0 0 0-.434-1.622l-.286-.071c-.97-.243-.97-1.62 0-1.864l.286-.071a.96.96 0 0 0 .434-1.622l-.211-.205c-.719-.695-.03-1.888.931-1.613l.284.08a.96.96 0 0 0 1.187-1.186l-.081-.284c-.275-.96.918-1.65 1.613-.931l.205.211a.96.96 0 0 0 1.622-.434l.071-.286zM12.973 8.5H8.25l-2.834 3.779A4.998 4.998 0 0 0 12.973 8.5zm0-1a4.998 4.998 0 0 0-7.557-3.779l2.834 3.78h4.723zM5.048 3.967c-.03.021-.058.043-.087.065l.087-.065zm-.431.355A4.984 4.984 0 0 0 3.002 8c0 1.455.622 2.765 1.615 3.678L7.375 8 4.617 4.322zm.344 7.646.087.065-.087-.065z"/>
 							</svg>
-							<a href="{{ path('parameters') }}" class="text-decoration-none text-white fw-bold ms-2">Paramètres</a>
+							<a href="{{ path('foods') }}" class="text-decoration-none text-warning fw-bold ms-2">Paramètres</a>
 						</li>
                     </ul>
                 </div>
@@ -108,55 +108,11 @@
         </nav>
     </header>
     <main>
-        <section class="d-flex flex-column align-items-center mt-5">
 
-            <section class="d-flex justify-content-center mb-5" id="selectContainer">
-                <select id="planningSelect">
-                    {% for owner in owners %}
-                        <option value="{{ owner['owner'] }}" {{ owner['owner'] == planningOwner ? 'selected' : null }}>
-                            {{ owner['owner'] }}
-                        </option>
-                    {% endfor %}
-                </select>
-            </section>
-
-            <section id="listSection" class="mb-3">
-                <div class="row mb-3 border-bottom border-warning pb-3">
-                    <div class="col-3 text-warning d-flex justify-content-center">Rayon</div>
-                    <div class="col-3 text-warning d-flex justify-content-center">Aliment</div>
-                    <div class="col-3 text-warning d-flex justify-content-center">Quantité</div>
-                    <div class="col-3 text-warning d-flex justify-content-center">Unité</div>
-                </div>
-                {% if shoppingRows|length > 0 %}
-                    {% for food in shoppingRows %}
-                        <div class="row">
-                            <div class="col-3 d-flex justify-content-center">
-                                {{ food.section.name }}
-                            </div>
-                            <div class="col-3 d-flex justify-content-center">
-                                {{ food.food.name }}
-                            </div>
-                            <div class="col-3 d-flex justify-content-center">
-                                {{ food.quantity }}
-                            </div>
-                            <div class="col-3 d-flex justify-content-center">
-                                {{ food.unit }}
-                            </div>
-                        </div>
-                    {% endfor %}
-                {% else %}
-                    <p class="text-center">Aucun repas planifié..</p> 
-                {% endif %}
-            </section>
-        </section>
-        <p class="text-center mt-5">
-            <a href="{{ path('generate_pdf', { 'planningOwner' : planningOwner }) }}" class="btn btn-sm btn-warning">Générer un PDF</a>
-        </p>
     </main>
 {% endblock %}
 
 {% block javascripts %}
 	{{ parent() }}
 	<script src="{{ asset('js/header.js') }}"></script>
-	<script src="{{ asset('js/shopping.js') }}"></script>
 {% endblock %}
